syntax = "proto3";
package databaseGrpc;
import "type_enum.proto";
import "request.proto";
import "response.proto";

message DbMessage {
  int64 id = 1;
  MESSAGE_TYPE messageType = 2;
  MESSAGE_CODE messageCode = 3;
  Request request = 4;
  Response response = 5;
}