syntax = "proto3";
package databaseGrpc;

enum RESPONSE_STATUS {
  SUCCESS = 0;
  FAIL = 1;
}


enum MESSAGE_TYPE {
  REQUEST = 0;
  RESPONSE = 1;
}

enum ITEM { // 更新的对象
  PLAYER = 0;
}

enum MESSAGE_CODE {
  FIND_REQUEST = 0;
  ADD_REQUEST = 1;
  DELETE_REQUEST = 2;
  UPDATE_REQUEST = 3;
  FIND_RESPONSE = 4;
  ADD_RESPONSE = 5;
  DELETE_RESPONSE = 6;
  UPDATE_RESPONSE = 7;
}
